# agent-rag-app

./: Dockerfile  Dockerfile.agent  Dockerfile.elastic  Dockerfile.index  Dockerfile.mcp  Dockerfile.ui  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  return.txt  sample.txt  shutdown.sh  startup.sh
agent/: agent.py
indexing/: Dockerfile  indexing.py  requirements.txt  server.py  test.py  ui.py
mcp/: server.py  test.py
mcp/agent/: agent.py
ui/: indexing_ui.py
